# ampal

./: cspell.json  make_wheels.sh  pyproject.toml  setup.py
.github/workflows/: github-deploy.yml
src/ampal/: amino_acids.py  mmcif_parser.py  pdb_parser.py
tests/: test_geometry.py  test_mmcif_parser.py
tests/testing_files/: 2ht0.cif
