[project]
name = "ampal"
version = "1.5.4"
description="A framework for representing biomolecular structure."
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    { name = "ChrisWellsWood", email = "cwwoodesq@gmail.com" }
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.7"
dependencies = [
    "cython",
    "networkx",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/isambard-uob/ampal"

[build-system]
requires = ["setuptools>=61", "cython"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "hypothesis",
    "pytest",
]
